--- a/style.css
+++ b/style.css
@@ -230,12 +230,15 @@ main {
 .inst{
     margin-left: 10px;
     padding-top: 15px;
+    color: rgb(0, 0, 0);
 }
 .inst a{
     text-decoration: none;
+    color: rgb(0, 0, 0);
 }
 .inst p,.what p{
     font-size: 1em;
+    color: rgb(0, 0, 0);
 }
 .inst h3,.what h3{
     font-size: 1.5em;
