--- a/style.css
+++ b/style.css
@@ -482,7 +482,7 @@ main {
     padding-top: 15px;
     color: black;
     }
-    .row .inst a{
+    .row .inst a,.row .what a{
     text-decoration: none;
     color: black;
     }
