--- a/style.css
+++ b/style.css
@@ -453,6 +453,13 @@ main {
     grid-template-columns: 350px;
     }
 
+    .lado img {
+    height: 85%;
+    width: 100%;
+    border-radius: 5px;
+    margin-top: 50px;
+    }
+
     .alb{
         margin-top: 25px;
     }
